--- a/library.bib
+++ b/library.bib
@@ -12160,12 +12160,31 @@ Amateur Radio Receiving Networks"},
   year      = {2022},
 }
 
-@thesis{Calderon2022-Thesis,
-   author = {Alexander Calderon},
-   city = {Scranton, PA},
-   institution = {The University of Scranton},
-   title = {Ray Tracing in Python Utilizing the PHaRLAP Engine},
-   year = {2022},
+@MastersThesis{Calderon2022-Thesis,
+  author      = {Alexander Calderon},
+  institution = {The University of Scranton},
+  title       = {Ray Tracing in Python Utilizing the PHaRLAP Engine},
+  city        = {Scranton, PA},
+  year        = {2022},
+}
+
+ 
+@Article{Brown2018,
+  author       = {Brown, Steven and Bilitza, Dieter and Yiğit, Erdal},
+  date         = {2018-06},
+  journaltitle = {Journal of Atmospheric and Solar-Terrestrial Physics},
+  title        = {Ionosonde-based indices for improved representation of solar cycle variation in the {International} {Reference} {Ionosphere} model},
+  doi          = {10.1016/j.jastp.2017.08.022},
+  issn         = {1364-6826},
+  language     = {en},
+  pages        = {137--146},
+  series       = {Vertical {Coupling} in the {Atmosphere}-{Ionosphere} {System}: {Recent} {Progress}},
+  url          = {https://www.sciencedirect.com/science/article/pii/S1364682617301724},
+  urldate      = {2022-05-15},
+  volume       = {171},
+  abstract     = {A new monthly ionospheric index, IGNS, is presented to improve the representation of the solar cycle variation of the ionospheric F2 peak plasma frequency, foF2. IGNS is calculated using a methodology similar to the construction of the ”global effective sunspot number”, IG, given by Liu et al. (1983) but selects ionosonde observations based on hemispheres. We incorporated the updated index into the International Reference Ionosphere (IRI) model and compared the foF2 model predictions with global ionospheric observations. We also investigated the influence of the underlying foF2 model on the IG index. IRI has two options for foF2 specification, the CCIR-66 and URSI-88 foF2 models. For the first time, we have calculated IG using URSI-88 and assessed the impact on model predictions. Through a retrospective model-data comparison, results show that the inclusion of the new monthly IGNS index in place of the current 12-month smoothed IG index reduce the foF2 model prediction errors by nearly a factor of two. These results apply to both day-time and nightime predictions. This is due to an overall improved prediction of foF2 seasonal and solar cycle variations in the different hemispheres.},
+  file         = {ScienceDirect Full Text PDF:https\://www.sciencedirect.com/science/article/abs/pii/S1364682617301724/pdfft?isDTMRedir=true&download=true:application/pdf},
+  keywords     = {Ionosphere, International Reference Ionosphere, Space weather, Solar index},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
